# ev_sdk_atlas_demo4.0_head_detection

./: CMakeLists.txt  README.md
config/: README.md  algo_config.json
include/: ji.h  ji_utils.h
src/: Configuration.hpp  SampleAlgorithm.cpp  SampleAlgorithm.hpp  SampleDetector.cpp  SampleDetector.hpp  ji.cpp
test/: Algo.cpp  Algo.h  CMakeLists.txt  test.cpp
